# rusty-roots

./: .gitignore  .rrignore  Cargo.toml  Cargo_README.md  README.md
src/: directory.rs  ignore.rs  lib.rs  main.rs  text_fmt.rs
tests/: test_complex.sh  test_modes.sh  test_simple.sh
