[package]
name = "rusty-roots"
version = "1.0.0"
edition = "2021"
description = "A Rust CLI tool that replicates the Unix 'tree' command with enhanced features."
license = "MIT"
repository = "https://github.com/kathirmeyyappan/rusty-roots"
homepage = "https://github.com/kathirmeyyappan/rusty-roots"
documentation = "https://github.com/kathirmeyyappan/rusty-roots/blob/main/README.md"
readme = "Cargo_README.md"
keywords = ["CLI", "filesystem", "tree", "rust"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = "4.0"
colored = "2.1"
mime_guess = "2.0"
mime = "0.3"
globset = "0.4"
log = "0.4"
env_logger = "0.11"